--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ nav ul {
   }
   
   nav a {
-    color: var(--dark););
+    color: var(--dark);
     font-weight: bold;
     text-decoration: none;
     font-family: var(--font-family);
@@ -57,7 +57,9 @@ h2{
 }
 
 p{
-    line-height: 2;
+    line-height: 1.5;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
 }
 .top-container{
     
@@ -68,7 +70,7 @@ p{
 .top-cloud{
     position: absolute;
     right: 40px;
-    top: 50px;
+    top: 120px;
 }
 .bottom-cloud{
     position: absolute;
@@ -163,11 +165,13 @@ footer{
 .project2{
   position: relative;
   text-align: center;
+  margin: 90px;
   
 }
 .project3{
   position: relative;
   text-align: center;
+  margin:90px;
   
 }
 .text-image-pre-work {
@@ -185,24 +189,54 @@ footer{
 .text-image-code-refactor{
   
   position: absolute;
-  top: 90%;
+  bottom: -20%;
   left: 40%;
   color: #40514E;
   font-family: var(--font-family);
   font-size:20px;
   transform: translate(-50%, -50%);
+  
 }
 .text-image-first-repo{
   position: absolute;
-  top: 100%;
-  left: 90%;
+  bottom: -30%;
+  left: 50%;
   color: #40514E;
   font-family: var(--font-family);
   font-size:20px;
   transform: translate(-60%, -50%);
+ 
+}
+.contact-me p{
+  font-size: 20px;
 }
 @media screen and (max-width: 768px) {
-  header {
-    flex-direction: column-reverse;
+  header nav ul{
+    flex-direction: row;
   }
+  h1{
+    font-size: 50px;
+  }
+  h2{
+    font-size: 1.8rem;
+    font-weight: normal;
+    color: #66BFBF;
+   
+  }
+  .bottom-cloud{
+    position: absolute;
+    left: 100px;
+    bottom: 80px;
+}
+.top-cloud{
+  position: absolute;
+  right: 40px;
+  top:80px;
+}
+p{
+  font-size: 20px;
+}
+.contact-me p{
+  font-size: 15px;
+}
 }
