--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --font-family:'Montserrat', sans-serif;
-  --dark: #13293d;
+  --dark: #1d354b;
   --light: #fff;
   --body-color: rgb(228, 236, 238);
   --navlink-color: #b9c6ae;
@@ -17,12 +17,10 @@ nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
+    flex-direction: row;
     min-width: 400px;
     padding-left: 80px;
-    
-  
- 
-  
+
   }
   nav li{
     list-style-type: none;
@@ -63,19 +61,19 @@ p{
 }
 .top-container{
     
-    background-color: #EAF6F6;
+    background-color: #d8f0f0;
     position: relative;
     
 }
 .top-cloud{
     position: absolute;
     right: 40px;
-    top: 120px;
+    top: 180px;
 }
 .bottom-cloud{
     position: absolute;
     left: 250px;
-    bottom: 300px;
+    top: 90px;
 }
 .intro{
     width: 30%;
@@ -92,7 +90,7 @@ p{
     display: flex;
     flex:0 0 600px;
     flex-direction: row;
-    background-color: #fff;
+    background-color: var(--light);
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -129,7 +127,7 @@ p{
     -moz-border-radius: 8;
     border-radius: 8px;
     font-family: var(--font-family);
-    color: #ffffff;
+    color: var(--light);
     font-size: 20px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
@@ -160,7 +158,7 @@ footer{
 .project1{
   position: relative;
   text-align: center;
-  color: white;
+  color: var(--light);
 }
 .project2{
   position: relative;
@@ -210,9 +208,36 @@ footer{
 .contact-me p{
   font-size: 20px;
 }
+nav a:hover {
+  color: #630707;
+  text-shadow: 0 0 10px #000 inset;
+}
+
+@media screen and (max-width: 992px){
+  h1{
+    font-size: 80px;
+  }
+  h2{
+    font-size: 1.5rem;
+    font-weight: normal;
+   
+   
+  }
+  .top-cloud{
+    position: absolute;
+    right: 80px;
+    top:90px;
+  }
+  .bottom-cloud{
+    position: absolute;
+    left: 70px;
+    top: 170px;
+}
+}
 @media screen and (max-width: 768px) {
-  header nav ul{
-    flex-direction: row;
+  header nav{
+    flex-wrap: wrap;
+    flex-direction: column; 
   }
   h1{
     font-size: 50px;
@@ -220,7 +245,7 @@ footer{
   h2{
     font-size: 1.8rem;
     font-weight: normal;
-    color: #66BFBF;
+   
    
   }
   .bottom-cloud{
@@ -239,4 +264,5 @@ p{
 .contact-me p{
   font-size: 15px;
 }
+
 }
