--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
     background-color: var(--body-color);
     font-family: 'Merriweather', serif;
 }
+.top-container{
+  background-color: #d8f0f0;
+  position: relative;
+  margin-top: -15px; 
+}
 nav ul {
     display: flex;
     flex-wrap: wrap;
@@ -56,13 +61,6 @@ p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
 }
-
-.top-container{
-    background-color: #d8f0f0;
-    position: relative;
-    margin-top: -15px;
-    
-}
 .mountain{
   position: absolute;
   left: 80px;
@@ -88,11 +86,10 @@ p{
 }
 .show-projects{
     display: flex;
-    flex:0 0 600px;
+    flex:0 0 800px;
     flex-direction: row;
     background-color: var(--light);
     padding: 20px;
-    display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -249,8 +246,6 @@ footer a:hover{
   h2{
     font-size: 1.8rem;
     font-weight: normal;
-   
-   
   }
   .bottom-cloud{
     position: absolute;
@@ -270,6 +265,16 @@ footer a:hover{
   }
   p{
     font-size: 20px;
+  }
+  .text-image-pre-work {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    color: rgb(225, 178, 178);
+    font-family: var(--font-family);
+    font-size: 20px;
+    border-radius: 30%;
+    transform: translate(-50%, -50%);
   }
   .contact-me p{
     font-size: 15px;
