--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@
 }
 
 body {
-    color: #40514E;
-    margin: 0;
-    text-align: center;
-    background-color: var(--body-color);
-    font-family: 'Merriweather', serif;
+  color: #40514E;
+  margin: 0;
+  text-align: center;
+  background-color: var(--body-color);
+  font-family: 'Merriweather', serif;
 }
 .top-container{
   background-color: #d8f0f0;
@@ -19,47 +19,52 @@ body {
   margin-top: -15px; 
 }
 nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    flex-direction: row;
-    min-width: 400px;
-    padding-left: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  flex-direction: row;
+  min-width: 400px;
+  padding-left: 80px;
 
-  }
-  nav li{
-    list-style-type: none;
-    font-size: 25px;   
-    padding-top: 10px; 
-  }
-  nav a {
-    color: var(--dark);
-    font-weight: bold;
-    text-decoration: none;
-    font-family: var(--font-family);
-    padding-bottom: 5px;
-    padding: 20px;
-  }
+}
+nav li{
+  list-style-type: none;
+  font-size: 25px;   
+  padding-top: 10px; 
+}
+nav a {
+  color: var(--dark);
+  font-weight: bold;
+  text-decoration: none;
+  font-family: var(--font-family);
+  padding-bottom: 5px;
+  padding: 20px;
+}
+nav a:hover {
+  color: #630707;
+  text-shadow: 2px 2px 2px #b5a1a1;
+}
 h1{
-    margin: 50px auto 0 auto;
-    font-family: 'Sacramento', cursive;
-    font-size: 90px;
-    color: #66BFBF;
-    line-height: 2;
+  margin: 50px auto 0 auto;
+  font-family: 'Sacramento', cursive;
+  font-size: 90px;
+  color: #66BFBF;
+  line-height: 2;
 }
 h2{
-    font-family: var(--font-family);
-    font-size: 2.5rem;
-    font-weight: normal;
-    color: #66BFBF;
-    font-weight: bolder;
-    padding-bottom: 10px;
+  font-family: var(--font-family);
+  font-size: 2.5rem;
+  font-weight: normal;
+  color: #66BFBF;
+  font-weight: bolder;
+  padding-bottom: 10px;
 }
 
 p{
-    line-height: 1.5;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+  line-height: 1.5;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 25px;
+  padding-bottom: 10px;
 }
 .mountain{
   position: absolute;
@@ -68,98 +73,52 @@ p{
   height: 100px;
 }
 .top-cloud{
-    position: absolute;
-    right: 40px;
-    top: 180px;
+  position: absolute;
+  right: 40px;
+  top: 180px;
 }
 .bottom-cloud{
-    position: absolute;
-    left: 250px;
-    top: 70px;
+  position: absolute;
+  left: 250px;
+  top: 70px;
 }
 .intro{
-    width: 30%;
-    margin: auto;
+  width: 30%;
+  margin: auto;
 }
 .main-container{
    margin: 100px 0;
 }
 .show-projects{
-    display: flex;
-    flex:0 0 800px;
-    flex-direction: row;
-    background-color: var(--light);
-    padding: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex:0 0 700px;
+  flex-direction: row;
+  background-color: var(--light);
+  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+.project1{
+  width: 100%;
+}
+
 .show-projects p{
-    height: 50px;
-    width: 100px;
-    background-color: #40514E;
-    z-index: 1;
-    
+  height: 50px;
+  width: 200px;
+  background-color: #40514E;
+  z-index: 1; 
 }
-#pre-work{
-    
+#pre-work{ 
   border-radius: 50%;
   margin: auto;
   width: 50%;
-  padding: 10px;
-   
+  padding: 10px;  
 }
-#code-refactor #first-day{
-  height: auto;
-  justify-content: space-around;
-}
-  
-.btn {
-  background: #11CDD4;
-  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
-  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
-  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
-  -webkit-border-radius: 8;
-  -moz-border-radius: 8;
-  border-radius: 8px;
-  font-family: var(--font-family);
-  color: var(--light);
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    
-}
-.contact-messsage{
-  width: 30%;
-  margin: 40px auto 60px;
-}
-footer{
-  margin-top: 40px;
-  height: 80px;
-  background-color: #66BFBF;
-  padding: 50px 0 40px;
-  margin-bottom: -100px;
-}
-.footer-link{
-  text-decoration: none;
-  color: #40514E;
-  font-size: 1.25rem;
-  padding: 20px;
-}
-.copy-right{
-  color: #EAF6F6;
-  font-size: 0.75rem;
-  padding: 20px 0;
-  margin-bottom: 0px;
-}
+
 .project1{
   position: relative;
   text-align: center;
   color: var(--light);
- 
-
 }
 .project2{
   position: relative;
@@ -173,16 +132,26 @@ footer{
   margin:90px;
   
 }
-
+#code-refactor{
+  width: 350px;
+  height: auto;
+  justify-content: space-around;
+}
+#first-day{
+  width: 350px;
+  height: auto;
+  justify-content: space-around;
+}
 .text-image-pre-work {
   position: absolute;
   top: 80%;
-  left: 50%;
-  color: rgb(225, 178, 178);
+  left: 55%;
+  color: rgb(219, 241, 196);
   font-family: var(--font-family);
   font-size: 30px;
   border-radius: 30%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 .text-image-code-refactor{
   position: absolute;
@@ -202,12 +171,50 @@ footer{
   font-size:20px;
   transform: translate(-60%, -50%);
 }
+.contact-messsage{
+  width: 30%;
+  margin: 40px auto 60px;
+}
 .contact-me p{
   font-size: 20px;
 }
-nav a:hover {
-  color: #630707;
-  text-shadow: 2px 2px 2px #b5a1a1;
+.btn {
+  background: #11CDD4;
+  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: var(--font-family);
+  color: var(--light);
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+}
+
+footer{
+  margin-top: 40px;
+  height: 80px;
+  background-color: #66BFBF;
+  padding: 50px 0 40px;
+  margin-bottom: -100px;
+}
+.footer-link{
+  text-decoration: none;
+  color: #40514E;
+  font-size: 1.25rem;
+  padding: 20px;
+}
+.copy-right{
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+  margin-bottom: 0px;
 }
 footer a:hover{
   color: #332020;
@@ -267,14 +274,18 @@ footer a:hover{
     font-size: 20px;
   }
   .text-image-pre-work {
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    color: rgb(225, 178, 178);
-    font-family: var(--font-family);
     font-size: 20px;
-    border-radius: 30%;
-    transform: translate(-50%, -50%);
+  }
+  #pre-work{
+    width: 250px;
+  }
+  #code-refactor{
+    width: 250px;
+    
+  }
+  #first-day{
+    width: 250px;
+    
   }
   .contact-me p{
     font-size: 15px;
