--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,9 @@ body {
 .top-container{
   background-color: #d8f0f0;
   position: relative;
-  margin-top: -15px; 
+ 
+  display: flex;
+  flex-direction: column;
 }
 nav ul {
   display: flex;
@@ -25,7 +27,6 @@ nav ul {
   flex-direction: row;
   min-width: 400px;
   padding-left: 80px;
-
 }
 nav li{
   list-style-type: none;
@@ -38,7 +39,7 @@ nav a {
   text-decoration: none;
   font-family: var(--font-family);
   padding-bottom: 5px;
-  padding: 20px;
+  padding: 10px;
 }
 nav a:hover {
   color: #630707;
@@ -59,7 +60,6 @@ h2{
   font-weight: bolder;
   padding-bottom: 10px;
 }
-
 p{
   line-height: 1.5;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -69,7 +69,7 @@ p{
 .mountain{
   position: absolute;
   left: 80px;
-  top:240px;
+  top:300px;
   height: 100px;
 }
 .top-cloud{
@@ -101,7 +101,6 @@ p{
 .project1{
   width: 100%;
 }
-
 .show-projects p{
   height: 50px;
   width: 200px;
@@ -114,7 +113,6 @@ p{
   width: 50%;
   padding: 10px;  
 }
-
 .project1{
   position: relative;
   text-align: center;
@@ -123,14 +121,12 @@ p{
 .project2{
   position: relative;
   text-align: center;
-  margin: 90px;
-  
+  margin: 90px; 
 }
 .project3{
   position: relative;
   text-align: center;
-  margin:90px;
-  
+  margin:90px; 
 }
 #code-refactor{
   width: 350px;
@@ -177,6 +173,7 @@ p{
 }
 .contact-me p{
   font-size: 20px;
+  padding-bottom: 30px;
 }
 .btn {
   background: #11CDD4;
@@ -193,28 +190,33 @@ p{
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
 }
-
 footer{
-  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   height: 80px;
   background-color: #66BFBF;
-  padding: 50px 0 40px;
-  margin-bottom: -100px;
+  padding: 50px 0 30px;
 }
 .footer-link{
   text-decoration: none;
   color: #40514E;
-  font-size: 1.25rem;
-  padding: 20px;
+  font-size: 1.45rem;
+  padding: 50px;
 }
-.copy-right{
-  color: #EAF6F6;
-  font-size: 0.75rem;
-  padding: 20px 0;
-  margin-bottom: 0px;
+
+footer ul{
+  
+  display: flex;
+  flex-wrap: wrap;
+  padding: revert; 
+}
+footer li{
+  justify-content: center;
+  flex-direction: row;
+  list-style-type: none;
 }
 footer a:hover{
   color: #332020;
@@ -226,27 +228,33 @@ footer a:hover{
     font-size: 80px;
   }
   h2{
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     font-weight: normal; 
   }
   .top-cloud{
     position: absolute;
     right: 80px;
     top:120px;
+    transition: all 0.5s ease-in-out;
   }
   .bottom-cloud{
     position: absolute;
     left: 70px;
     top: 90px;
+    transition: all 0.5s ease-in-out; 
+  }
+  .mountain{
+    top:270px;
+    transition: all 0.5s ease-in-out;
+  }
 }
-}
+
 @media screen and (max-width: 768px) {
   nav ul {
     display: flex;
     justify-content: center;
     flex-direction: row; 
   }
- 
   h1{
     font-size: 50px;
   }
@@ -257,21 +265,27 @@ footer a:hover{
   .bottom-cloud{
     position: absolute;
     left: 20px;
-    top:30px;
+    top: 60px;
+    transition: all 0.5s ease-in-out;
   }
   .top-cloud{
     position: absolute;
     right: 40px;
     top:90px;
+    transition: all 0.5s ease-in-out;
   }
   .mountain{
     position: absolute;
     left: 10px;
-    top:280px;
+    top:270px;
     height: 100px;
+    transition: all 0.5s ease-in-out;
   }
   p{
     font-size: 20px;
+  }
+  .intro{
+    width:100%;
   }
   .text-image-pre-work {
     font-size: 20px;
@@ -280,15 +294,14 @@ footer a:hover{
     width: 250px;
   }
   #code-refactor{
-    width: 250px;
-    
+    width: 250px; 
   }
   #first-day{
     width: 250px;
-    
   }
   .contact-me p{
     font-size: 15px;
   }
-
+  
+  
 }
