--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ footer a:hover{
 @media screen and (max-width: 768px) {
   nav ul {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: row; 
   }
   h1{
