--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,7 +255,9 @@ footer a:hover{
     display: flex;
     justify-content: flex-start;
     flex-direction: row; 
+   
   }
+  
   h1{
     font-size: 50px;
   }
@@ -304,7 +306,8 @@ footer a:hover{
     font-size: 15px;
   }
   footer li{
-    justify-content: left;
+    padding-left: 20px;
+    justify-content: center;
     flex-direction: row;
   }
   
